--- a/gutterball/pom.xml
+++ b/gutterball/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.candlepin</groupId>
   <artifactId>gutterball</artifactId>
-  <version>1.0.9</version>
+  <version>1.0.15</version>
   <properties>
     <org.apache.qpid-qpid-common.version>0.30</org.apache.qpid-qpid-common.version>
     <org.apache.qpid-qpid-client.version>0.30</org.apache.qpid-qpid-client.version>
@@ -71,6 +71,7 @@
     <com.sun.xml.bind-jaxb-impl.version>2.1.12</com.sun.xml.bind-jaxb-impl.version>
     <net.oauth.core-oauth.version>20100527</net.oauth.core-oauth.version>
     <net.oauth.core-oauth-provider.version>20100527</net.oauth.core-oauth-provider.version>
+    <org.candlepin-candlepin-common.version>1.0.22</org.candlepin-candlepin-common.version>
   </properties>
   <dependencies>
     <dependency>
@@ -402,6 +403,11 @@
       <groupId>net.oauth.core</groupId>
       <artifactId>oauth-provider</artifactId>
       <version>${net.oauth.core-oauth-provider.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.candlepin</groupId>
+      <artifactId>candlepin-common</artifactId>
+      <version>${org.candlepin-candlepin-common.version}</version>
     </dependency>
   </dependencies>
 </project>
