--- a/server/pom.xml
+++ b/server/pom.xml
@@ -71,6 +71,7 @@
     <org.slf4j-slf4j-api.version>1.7.5</org.slf4j-slf4j-api.version>
     <net.oauth.core-oauth.version>20100527</net.oauth.core-oauth.version>
     <net.oauth.core-oauth-provider.version>20100527</net.oauth.core-oauth-provider.version>
+    <javax.servlet-servlet-api.version>2.5</javax.servlet-servlet-api.version>
     <org.quartz-scheduler-quartz.version>2.1.5</org.quartz-scheduler-quartz.version>
     <org.jboss.resteasy-jaxrs-api.version>2.3.7.Final</org.jboss.resteasy-jaxrs-api.version>
     <org.jboss.resteasy-resteasy-jaxrs.version>2.3.7.Final</org.jboss.resteasy-resteasy-jaxrs.version>
@@ -721,6 +722,18 @@
       <groupId>net.oauth.core</groupId>
       <artifactId>oauth-provider</artifactId>
       <version>${net.oauth.core-oauth-provider.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>${javax.servlet-servlet-api.version}</version>
+      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
