--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.candlepin</groupId>
     <artifactId>candlepin-parent</artifactId>
-    <version>1.0</version>
+    <version>2.0</version>
     <relativePath>..</relativePath>
   </parent>
   <groupId>org.candlepin</groupId>
@@ -546,6 +546,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>com.googlecode.gettext-commons</groupId>
+        <artifactId>gettext-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
